--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ nav {
 
 .main-container .post img {
     width: 100%;
-    margin: .6rem 0;
+    margin: 0 0 .7rem;
 }
 
 .post .description,
@@ -157,6 +157,7 @@ footer p {
 @media (max-width: 750px) {
     .container {
         flex-direction: column;
+        padding: .8rem;
     }
 
     .main-container,
