--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ nav {
 .nav-itens ul {
     display: flex;
     gap: 12px;
-    font-size: 20px;
+    font-size: 14px;
 }
 
 /* containers */
@@ -157,7 +157,7 @@ footer p {
 @media (max-width: 750px) {
     .container {
         flex-direction: column;
-        padding: .8rem;
+        padding: 1.2rem .8rem;
     }
 
     .main-container,
